syntax = "proto3";

package examplepb.v1;

option go_package = "github.com/mikalai-mitsin/example/pkg/examplepb/v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/api/annotations.proto";

message UserCreate {
  string first_name = 1;
  string last_name = 2;
  string password = 3;
  string email = 4;
  string group_id = 5;
}

message UserGet {
  string id = 1;
}

message UserUpdate {
  string id = 1;
  google.protobuf.StringValue first_name = 2;
  google.protobuf.StringValue last_name = 3;
  google.protobuf.StringValue password = 4;
  google.protobuf.StringValue email = 5;
  google.protobuf.StringValue group_id = 6;
}

message User {
  string id = 1;
  google.protobuf.Timestamp updated_at = 2;
  google.protobuf.Timestamp created_at = 3;
  string first_name = 4;
  string last_name = 5;
  string password = 6;
  string email = 7;
  string group_id = 8;
}

message ListUser {
  repeated User items = 1;
  uint64 count = 2;
}

message UserDelete {
  string id = 1;
}

message UserFilter {
  google.protobuf.UInt64Value page_number = 1;
  google.protobuf.UInt64Value page_size = 2;
  repeated string order_by = 3;
  repeated string ids = 4;
  google.protobuf.StringValue search = 5;
}

service UserService {
  rpc Create(examplepb.v1.UserCreate) returns (examplepb.v1.User) {
    option (google.api.http) = {
      post: "/api/v1/users"
      body: "*"
    };
  }
  rpc Get(examplepb.v1.UserGet) returns (examplepb.v1.User) {
    option (google.api.http) = {get: "/api/v1/users/{id}"};
  }
  rpc Update(examplepb.v1.UserUpdate) returns (examplepb.v1.User) {
    option (google.api.http) = {
      patch: "/api/v1/users/{id}"
      body: "*"
    };
  }
  rpc Delete(examplepb.v1.UserDelete) returns (google.protobuf.Empty) {
    option (google.api.http) = {delete: "/api/v1/users/{id}"};
  }
  rpc List(examplepb.v1.UserFilter) returns (examplepb.v1.ListUser) {
    option (google.api.http) = {get: "/api/v1/users"};
  }
}